# datamap-cli

./: .env.example  .gitignore  README.md  env.example  pyproject.toml
docs/: datamap_cli_prd.md  tasks.md  technical_specification.md
src/datamap_cli/: __init__.py  cli.py
src/datamap_cli/api/: __init__.py  client.py  exceptions.py  models.py
src/datamap_cli/commands/: config.py  dataset.py  download.py  file.py  version.py
src/datamap_cli/config/: settings.py
src/datamap_cli/utils/: __init__.py  cli_context.py  help.py  interactive.py  logging.py  output.py  progress.py
tests/: test_config.py  test_utils.py  test_utils_integration.py
tests/test_api/: test_client.py  test_models.py
tests/test_commands/: test_dataset.py  test_download.py  test_version.py
